--- a/task-1/css/task1.css
+++ b/task-1/css/task1.css
@@ -18,6 +18,7 @@ body{
 .boxes {
     background-color: antiquewhite;
     width: 31%;
+    height: 300px;
     float: left;
     margin-bottom: 15px;
     overflow-y: auto;
