--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,16 @@ body h1 {
     position: absolute;
     bottom: 1;
 }
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    #cards {
+        width: 100%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .card {
+        float: none;
+        width: 100%;
+    }
+  }
