--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,43 @@
 body {
-    background-color: coral;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #333;
-    margin: 0;
-    padding: 0;
+  background-color: coral;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #333;
+  margin: 0;
+  padding: 0;
 }
 body h1 {
-    text-align: center;
-    font-family: 'Tangerine', serif;
-    font-size: 70px;
+  text-align: center;
+  font-family: "Tangerine", serif;
+  font-size: 70px;
 }
 #cards {
-    position: relative;
-    display: flex;
-    justify-content: center;
+  position: relative;
+  display: flex;
+  justify-content: center;
 }
 .card {
-    float: left;
-    padding: 5px;
-    margin: 5px;
-    margin-right: 10px;
-    height: 350px;
-    overflow-y: auto;
+  float: left;
+  padding: 5px;
+  margin: 5px;
+  margin-right: 10px;
+  height: 350px;
+  overflow-y: auto;
 }
 .btn {
-    position: absolute;
-    bottom: 1;
+  position: absolute;
+  bottom: 1;
 }
 @media only screen and (max-width: 768px) {
-    /* For mobile phones: */
-    #cards {
-        width: 100%;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .card {
-        float: none;
-        width: 100%;
-    }
+  /* For mobile phones: */
+  #cards {
+    width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
+  .card {
+    float: none;
+    width: 100%;
+  }
+}
