--- a/task-4/css/index.css
+++ b/task-4/css/index.css
@@ -1,208 +1,208 @@
 .left {
-    float: left;
-    display: flex;
+  float: left;
+  display: flex;
 }
 .left img {
-    width: 40px;
-    height: 50px;
-    margin-left: 15px;
-    margin-top: 10px;
-    margin-right: 10px;
+  width: 40px;
+  height: 50px;
+  margin-left: 15px;
+  margin-top: 10px;
+  margin-right: 10px;
 }
 .right {
-    float: right;
-    margin-top: 13px;
+  float: right;
+  margin-top: 13px;
 }
 .right img {
-    width: 50px;
-    height: 50px;
-    margin-right: 15px;
+  width: 50px;
+  height: 50px;
+  margin-right: 15px;
 }
 #navbar {
-    background-color: #625c5c;
-    height: 70px;
-    color: white;
-    display: flex;
-    margin: 0 auto;
-    margin-bottom: 1px;
-    justify-content: space-between;
+  background-color: #625c5c;
+  height: 70px;
+  color: white;
+  display: flex;
+  margin: 0 auto;
+  margin-bottom: 1px;
+  justify-content: space-between;
 }
 body {
-    font-family: "Cascadia Mono SemiBold", monospace;
-    background-color: #ececec;
-    margin: 0 auto;
+  font-family: "Cascadia Mono SemiBold", monospace;
+  background-color: #ececec;
+  margin: 0 auto;
 }
 #id {
-    background-color: #625c5c;
+  background-color: #625c5c;
 }
 #style-bar {
-    display: flex;
-    float:left;
-    flex-direction: column;
-    background-color: #625c5c;
-    height: 668px;
-    width: 15%;
-    margin-bottom: 0 auto;
-    margin-top: 1 auto;
+  display: flex;
+  float: left;
+  flex-direction: column;
+  background-color: #625c5c;
+  height: 668px;
+  width: 15%;
+  margin-bottom: 0 auto;
+  margin-top: 1 auto;
 }
 a {
-    color: white;
-    margin: 12px;
-    margin-left: 30px;
-    float: left;
+  color: white;
+  margin: 12px;
+  margin-left: 30px;
+  float: left;
 }
 a:hover {
-    color: green;
+  color: green;
 }
 #main-container {
-    float: left;
+  float: left;
 }
 #main-container h2 {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 .boxes {
-    float: left;
-    color: white;
-    margin-left: 10px;
-    text-align: center;
-    height: 140px;
-    width: 280px;
-    margin-right: 10px;
-    margin-left: 10px;
-    padding-top: 15px;
-    font-size: 18px;
+  float: left;
+  color: white;
+  margin-left: 10px;
+  text-align: center;
+  height: 140px;
+  width: 280px;
+  margin-right: 10px;
+  margin-left: 10px;
+  padding-top: 15px;
+  font-size: 18px;
 }
 #box1 {
-    background-color: #0ACE82;
+  background-color: #0ace82;
 }
 #box2 {
-    background-color: #A259FF;
+  background-color: #a259ff;
 }
 #box3 {
-    background-color: #F34E1E;
+  background-color: #f34e1e;
 }
 #box4 {
-    background-color: #1ABCFD;
+  background-color: #1abcfd;
 }
 span {
-    display: block;
-    margin-top: 30px;
+  display: block;
+  margin-top: 30px;
 }
 .circle {
-    float: left;
-    height: 200px;
-    width: 200px;
-    text-align: center;
-    border-radius: 50%;
-    display: flex;
-    align-items: center; 
-    justify-content: center;
-    margin-left: 30px;
+  float: left;
+  height: 200px;
+  width: 200px;
+  text-align: center;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 30px;
 }
 #circle-1 {
-    background-color: #A259FF;
-    margin-right: 70px;
+  background-color: #a259ff;
+  margin-right: 70px;
 }
 #circle-2 {
-    background-color: #1ABCFD;
-    margin-right: 70px;
+  background-color: #1abcfd;
+  margin-right: 70px;
 }
 #circle-3 {
-    background-color: #F04A1B;
+  background-color: #f04a1b;
 }
 #inner1 {
-    background-color: #0ACE82;
-    width: 130px;
-    height: 130px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center; 
-    justify-content: center;
+  background-color: #0ace82;
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 #inner2 {
-    background-color: #F5F5F5;
-    width: 180px;
-    height: 180px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center; 
-    justify-content: center;
+  background-color: #f5f5f5;
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 #inner3 {
-    background-color: #FF7261;
-    width: 170px;
-    height: 170px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center; 
-    justify-content: center;
+  background-color: #ff7261;
+  width: 170px;
+  height: 170px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 #bottom-container {
-    margin-left: 20px;
-    margin-top: 250px;
+  margin-left: 20px;
+  margin-top: 250px;
 }
 #bar-graph {
-    float: left;
-    margin-top: 30px;
-    border-bottom: 5px solid #605C5B;
-    height: 150px;
-    width: 260px;
-    margin-left: 70px;
+  float: left;
+  margin-top: 30px;
+  border-bottom: 5px solid #605c5b;
+  height: 150px;
+  width: 260px;
+  margin-left: 70px;
 }
 #bar1 {
-    float: left;
-    height: 100%;
-    width: 3.5%;
-    margin-right: 15px;
-    background-color: #0ACE82;
+  float: left;
+  height: 100%;
+  width: 3.5%;
+  margin-right: 15px;
+  background-color: #0ace82;
 }
 #bar2 {
-    float: left;
-    height: 60%;
-    width: 3.5%;
-    margin-right: 15px;
-    background-color: #F04A1B;
-    margin-top: 60px;
+  float: left;
+  height: 60%;
+  width: 3.5%;
+  margin-right: 15px;
+  background-color: #f04a1b;
+  margin-top: 60px;
 }
 #bar3 {
-    float: left;
-    height: 75%;
-    width: 3.5%;
-    margin-right: 15px;
-    margin-top: 37.7px;
-    background-color: #A259FF;
+  float: left;
+  height: 75%;
+  width: 3.5%;
+  margin-right: 15px;
+  margin-top: 37.7px;
+  background-color: #a259ff;
 }
 #bar4 {
-    float: left;
-    height: 35%;
-    width: 3.5%;
-    margin-right: 15px;
-    margin-top: 97px;
-    background-color: #1ABCFD;
+  float: left;
+  height: 35%;
+  width: 3.5%;
+  margin-right: 15px;
+  margin-top: 97px;
+  background-color: #1abcfd;
 }
 #bar5 {
-    float: left;
-    height: 90%;
-    width: 3.5%;
-    margin-right: 15px;
-    margin-top: 20px;
-    background-color: #625C5C;
+  float: left;
+  height: 90%;
+  width: 3.5%;
+  margin-right: 15px;
+  margin-top: 20px;
+  background-color: #625c5c;
 }
 #bar6 {
-    float: left;
-    height: 20%;
-    width: 3.5%;
-    margin-right: 15px;
-    margin-top: 120px;
-    background-color: #FF7261;
+  float: left;
+  height: 20%;
+  width: 3.5%;
+  margin-right: 15px;
+  margin-top: 120px;
+  background-color: #ff7261;
 }
 #inner31 {
-    background-color: #A15AFC;
-    color: white;
-    width: 65px;
-    height: 65px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center; 
-    justify-content: center;
+  background-color: #a15afc;
+  color: white;
+  width: 65px;
+  height: 65px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
