--- a/task-2/css/style.css
+++ b/task-2/css/style.css
@@ -1,9 +1,9 @@
 body {
-  background-color: #333;
+  background-color: #301B1A;
   margin: 0 auto;
 }
 #navbar {
-  background-color: purple;
+  background-color: #533261;
   height: 60px;
   color: white;
   display: flex;
@@ -55,16 +55,24 @@ a {
   float: right;
 }
 #top-container {
-  background-color: lightgrey;
+  background-color: #D2D9E9;
   font-family: sans-serif;
   height: 300px;
   margin: 15px;
 }
 #bottom-container {
-  background-color: lightgrey;
-  border: 18px solid brown;
+  background-color: #B74242;
   height: 300px;
   margin: 15px;
+}
+#bottom-inside {
+  background-color: #D2D9E9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 85%;
+  margin: 10px;
+  border: 3px solid #4A8E2A;
 }
 p {
   font-size: 22px;
