--- a/task-1/css/style.css
+++ b/task-1/css/style.css
@@ -3,28 +3,28 @@ body {
   margin: 0 auto;
 }
 #navbar {
-  background-color: purple;
+  background-color: #543561;
   height: 50px;
   margin-bottom: 15px;
 }
 #main-container {
   background-color: antiquewhite;
-  height: 200px;
-  margin-bottom: 15px;
+  height: 300px;
+  margin-bottom: 25px;
   margin-left: 5px;
   margin-right: 10px;
   overflow-y: auto;
 }
 .boxes {
   background-color: antiquewhite;
-  width: 31%;
+  width: 31.15%;
   height: 300px;
   float: left;
   margin-bottom: 15px;
   overflow-y: auto;
 }
 .m-r {
-  margin-right: 15px;
+  margin-right: 25px;
 }
 .m-l {
   margin-left: 5px;
