--- a/task-4/css/style.css
+++ b/task-4/css/style.css
@@ -70,10 +70,10 @@ a:hover {
   float: left;
   color: white;
   text-align: center;
-  height: 17vh;
+  height: 15vh;
   width: 16.58vw;
   margin-right: 10px;
-  padding-top: 15px;
+  padding-top: 5vh;
   font-size: 18px;
   margin-left: 3vw;
 }
