--- a/task-2/css/style.css
+++ b/task-2/css/style.css
@@ -44,6 +44,7 @@ a {
   margin-top: 35px;
   margin-left: 10px;
   float: left;
+  overflow: auto;
 }
 #box2 {
   background-color: yellowgreen;
@@ -53,11 +54,12 @@ a {
   margin-top: 35px;
   margin-right: 10px;
   float: right;
+  overflow: auto;
 }
 #top-container {
   background-color: #D2D9E9;
   font-family: sans-serif;
-  height: 300px;
+  height: 350px;
   margin: 15px;
 }
 #bottom-container {
@@ -76,4 +78,65 @@ a {
 }
 p {
   font-size: 22px;
+}
+@media screen and (max-width: 768px) {
+  #navbar {
+    width: 100%;
+  }
+  #top-container {
+    margin-bottom: 10px;
+    overflow: scroll;
+  }
+  #bottom-container {
+    margin-top: 10px;
+    height: calc(100vh - 410px);
+    overflow: scroll;
+  }
+  .left {
+    float: none;
+  }
+  .right {
+    float: none;
+  }
+  .left img {
+    height: 40px;
+  }
+  .left h2 {
+    display: inline;
+    color: aliceblue;
+  }
+  a {
+    text-decoration: none;
+    color: aliceblue;
+    padding: 10px;
+  }
+  #box1 {
+    width: 80vw;
+    float: none;
+    /* padding: 10px; */
+    margin-left: calc((20vw/2) - 35px);
+  }
+  #box2 {
+    width: 80vw;
+    float: none;
+    /* padding: 10px; */
+    margin-left: calc((20vw/2) - 35px);
+  }
+  .content-1 {
+    padding: 10px;
+  }
+  .content-1 p {
+    font-size: 18px;
+  }
+  .content-2 {
+    padding: 10px;
+  }
+  .content-2 p {
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 510px){
+  .right {
+    display: none;
+  }
 }
