--- a/task-1/css/style.css
+++ b/task-1/css/style.css
@@ -12,7 +12,7 @@ body {
   height: 300px;
   margin-bottom: 25px;
   margin-left: 5px;
-  margin-right: 10px;
+  margin-right: 5px;
   overflow-y: auto;
 }
 .boxes {
@@ -52,4 +52,48 @@ a {
   text-decoration: none;
   color: aliceblue;
   padding: 10px;
+}
+@media screen and (max-width: 768px) {
+  #navbar {
+    width: 100vw;
+  }
+  #main-container {
+    width: 100vw;
+    margin-bottom: 10px;
+    margin-left: 0px;
+    margin-right: -2px;
+  }
+  .boxes {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 10px;
+    overflow: auto;
+  }
+  .m-r {
+    margin-right: -2px;
+  }
+  .m-l {
+    margin-left: 0px;
+  }
+  .left {
+    float: none;
+  }
+  .right {
+    display: none;
+  }
+  .left img {
+    height: 40px;
+  }
+  .left h2 {
+    display: inline;
+    color: aliceblue;
+  }
+  a {
+    text-decoration: none;
+    color: aliceblue;
+    padding: 10px;
+  }
+  p {
+    overflow-x: scroll;
+  }
 }
