--- a/task-4/css/style.css
+++ b/task-4/css/style.css
@@ -95,14 +95,14 @@ span {
 }
 .circle {
   float: left;
-  height: 200px;
-  width: 200px;
+  height: 10.41vw;
+  width: 10.41vw;
   text-align: center;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 5.5vw;
+  margin-left: calc(((17vw - 10.41vw) / 2) + 3vw);
 }
 #circle-1 {
   background-color: #a259ff;
@@ -117,8 +117,8 @@ span {
 }
 #inner1 {
   background-color: #0ace82;
-  width: 130px;
-  height: 130px;
+  width: 6.77vw;
+  height: 6.77vw;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -126,8 +126,8 @@ span {
 }
 #inner2 {
   background-color: #f5f5f5;
-  width: 180px;
-  height: 180px;
+  width: 9.37vw;
+  height: 9.37vw;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -135,8 +135,8 @@ span {
 }
 #inner3 {
   background-color: #ff7261;
-  width: 170px;
-  height: 170px;
+  width: 8.80vw;
+  height: 8.80vw;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -151,8 +151,8 @@ span {
   margin-top: 30px;
   border-bottom: 5px solid #605c5b;
   height: 150px;
-  width: 260px;
-  margin-left: 8vw;
+  width: 17vw;
+  margin-left: calc(((17vw - 10.41vw) / 2) + 3vw);
 }
 #bar1 {
   float: left;
@@ -204,8 +204,8 @@ span {
 #inner31 {
   background-color: #a15afc;
   color: white;
-  width: 65px;
-  height: 65px;
+  width: 3.38vw;
+  height: 3.38vw;
   border-radius: 50%;
   display: flex;
   align-items: center;
