--- a/task-2/css/style.css
+++ b/task-2/css/style.css
@@ -68,7 +68,7 @@ a {
   margin: 15px;
 }
 #bottom-inside {
-  background-color: #D2D9E9;
+  background-color: #DADADA;
   display: flex;
   justify-content: center;
   align-items: center;
