--- a/task-1/css/style.css
+++ b/task-1/css/style.css
@@ -8,7 +8,7 @@ body {
   margin-bottom: 15px;
 }
 #main-container {
-  background-color: antiquewhite;
+  background-color: #D1D8E8;
   height: 300px;
   margin-bottom: 25px;
   margin-left: 5px;
@@ -16,7 +16,7 @@ body {
   overflow-y: auto;
 }
 .boxes {
-  background-color: antiquewhite;
+  background-color: #D1D8E8;
   width: 31.15%;
   height: 300px;
   float: left;
