--- a/task-2/css/style.css
+++ b/task-2/css/style.css
@@ -14,7 +14,6 @@ div {
   padding: 10px;
 }
 .left {
-  float: left;
   display: flex;
 }
 .right {
@@ -25,9 +24,15 @@ nav {
   margin-right: 20px;
 }
 .left img {
+  float: left;
   width: 50px;
   height: 50px;
   margin-right: 10px;
+}
+.left h2 {
+  float: left;
+  margin-top: 10px;
+  font-size: 25px;
 }
 a {
   color: #fff;
@@ -86,7 +91,7 @@ p {
   #top-container {
     margin-bottom: 10px;
     overflow: scroll;
-    height: calc(50vh);
+    height: 50vh;
   }
   #bottom-container {
     margin-top: 10px;
@@ -136,7 +141,7 @@ p {
     font-size: 18px;
   }
 }
-@media screen and (max-width: 510px) {
+@media screen and (max-width: 569px) {
   .right {
     display: none;
   }
