--- a/task-1/css/style.css
+++ b/task-1/css/style.css
@@ -62,7 +62,7 @@ p {
 @media screen and (max-width: 768px) {
   #navbar {
     width: 100vw;
-    height: 6vh;
+    height: 60px;
   }
   #main-container {
     width: 100vw;
