--- a/task-6/css/register.css
+++ b/task-6/css/register.css
@@ -33,11 +33,11 @@
 }
 .main {
   display: flex;
-  background-color: gray;
 }
 .sidebar {
   float: left;
   height: calc(100vh - 81px);
+  /* height: 100vh; */
   width: 13vw;
   background-color: white;
   border-right: 2px solid lightgray;
@@ -45,7 +45,7 @@
 .sidebar a {
   color: gray;
   display: block;
-  margin-left: 3.5vw;
+  margin-left: calc((13vw - 86px)/2);
   margin-top: 25px;
   text-decoration: none;
   font-weight: bold;
@@ -59,6 +59,7 @@ form {
   float: left;
   flex-direction: column;
   margin-left: 2vw;
+  max-width: 85vw;
 }
 .right-main {
   display: flex;
@@ -144,17 +145,31 @@ input[name="hostel"] {
   margin-top: 1vh;
   border: 2px solid lightgrey;
 }
+.btn-main {
+  /* display: flex; */
+  overflow: hidden;
+  clear: both;
+  position: relative;
+  height: 20vh;
+  width: 95vw;
+}
 .buttons {
+  /* display: flex; */
   margin-top: 10px;
-  float: right;
+  /* float: right; */
+  width: 85vw;
+  position: absolute;
+  right: -35vw;
+  bottom: 5vw;
 }
 .buttons button {
+  /* float: left; */
   color: white;
   height: 45px;
   width: 150px;
   border-radius: 30px;
   margin-right: 30px;
-  border: 0;
+  /* border: 0; */
   font-weight: bold;
 }
 #clr {
@@ -164,8 +179,10 @@ input[name="hostel"] {
   background-color: #3bb989;
 }
 .main-content {
-  background-color: gray;
+  position: relative;
   width: 87vw;
+  height: calc(100vh - 81px);
+  overflow: scroll;
 }
 textarea {
   -webkit-box-sizing: border-box;
@@ -180,10 +197,8 @@ textarea {
   display: none;
 }
 @media screen and (max-width:942px) {
-  .buttons {
-    position: absolute;
-    right: 5vw;
-    bottom: 3vw;
+  .main-content {
+    width: 100vw;
   }
   .check label {
     margin-left: 2vw;
@@ -203,8 +218,50 @@ textarea {
   .right-main {
     right: 10vw;
   }
+  .btn-main {
+    /* display: flex; */
+    overflow: hidden;
+    clear: both;
+    position: relative;
+    height: 20vh;
+    width: 95vw;
+  }
+  .buttons {
+    /* display: flex; */
+    margin-top: 10px;
+    /* float: right; */
+    width: 85vw;
+    position: absolute;
+    right: -30vw;
+    bottom: 5vw;
+  }
+}
+@media screen and (max-width: 634px) {
+  .btn-main {
+    /* display: flex; */
+    overflow: hidden;
+    clear: both;
+    position: relative;
+    height: 20vh;
+    width: 95vw;
+  }
+  .buttons {
+    /* display: flex; */
+    margin-top: 10px;
+    /* float: right; */
+    width: 85vw;
+    position: absolute;
+    right: -15vw;
+    bottom: 5vw;
+  }
 }
 @media screen and (max-width: 480px) {
+  form {
+    height: 100vh;
+  }
+  .form-main {
+    height: 100vh;
+  }
   .right-main {
     display: none;
   }
@@ -214,10 +271,40 @@ textarea {
   #mob-only {
     display: flex;
   }
-  input[type="text"] {
+  input[type="text"], input[type="tel"], select {
     width: 87vw;
   }
   textarea {
     width: 87vw;
+  }
+  .btn-main {
+    /* display: flex; */
+    overflow: hidden;
+    clear: both;
+    position: relative;
+    height: 20vh;
+    width: 95vw;
+  }
+  .buttons {
+    /* display: flex; */
+    margin-top: 10px;
+    /* float: right; */
+    width: 85vw;
+    position: absolute;
+    right: -10vw;
+    bottom: 5vw;
+  }
+}
+@media screen and (max-width:425px) {
+  .buttons button {
+    /* float: left; */
+    color: white;
+    height: 45px;
+    width: 150px;
+    border-radius: 30px;
+    margin-right: 30px;
+    margin-top: 10px;
+    /* border: 0; */
+    font-weight: bold;
   }
 }
