--- a/task-6/css/register.css
+++ b/task-6/css/register.css
@@ -116,7 +116,7 @@ input[name="hostel"] {
 }
 .check {
   display: flex;
-  width: 70vw;
+  width: 80vw;
   height: 30px;
   margin-top: 1.5vh;
   align-items: center;
@@ -133,6 +133,8 @@ input[name="hostel"] {
   display: flex;
   float: left;
   margin-right: 3vw;
+  margin-left: 1.5vw;
+  margin-top: 2.2vh;
 }
 .address {
   margin-top: 2vh;
@@ -204,18 +206,18 @@ input[type="text"], input[type="tel"], select {
   .main-content {
     width: 100vw;
   }
-  .check label {
+  /* .check label {
     margin-left: 2vw;
-  }
+  } */
   .sidebar {
     display: none;
   }
-  .check input {
+  /* .check input {
     height: 17px;
     margin-left: 0vw;
     margin-right: 0vw;
     margin-top: 2.2vh;
-  }
+  } */
   input[type="text"], input[type="tel"], select {
     width: 40vw;
   }
@@ -240,6 +242,11 @@ input[type="text"], input[type="tel"], select {
     bottom: 5vw;
   }
 }
+@media screen and (max-width: 774px) {
+  .check {
+    width: 95vw;
+  }
+}
 @media screen and (max-width: 634px) {
   .btn-main {
     /* display: flex; */
@@ -257,6 +264,34 @@ input[type="text"], input[type="tel"], select {
     position: absolute;
     right: -15vw;
     bottom: 5vw;
+  }
+  .check, label {
+    all: initial;
+  }
+  .check {
+    margin-top: 20px;
+    margin-bottom: 30px;
+    height: 30vw;
+    width: 87vw;
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
+  }
+  .check input {
+    display: flex;
+    border: 1px solid gray;
+    float: left;
+    height: 20px;
+    margin-left: 10px;
+    width: 20px;
+  }
+  .check label {
+    display: flex;
+    float: left;
+    /* justify-content: flex-start; */
+    width: 30vw;
+    margin-bottom: 20px;
+    margin-top: 3px;
   }
 }
 @media screen and (max-width: 480px) {
@@ -300,7 +335,30 @@ input[type="text"], input[type="tel"], select {
     right: -10vw;
     bottom: 5vw;
   }
-  
+  .check, .check input, label {
+    all: unset;
+  }
+  .check {
+    height: 50vw;
+    width: 87vw;
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
+  }
+  .check input {
+    display: flex;
+    border: 1px solid gray;
+    float: left;
+    height: 20px;
+    margin-left: 10px;
+    width: 20px;
+  }
+  .check label {
+    display: flex;
+    float: left;
+    justify-content: flex-start;
+    width: 30vw;
+  }
 }
 @media screen and (max-width:425px) {
   .buttons button {
