modulus operator and mobile device height fixed

--- a/task-8/css/style.css
+++ b/task-8/css/style.css
@@ -67,6 +67,7 @@ h1 {
 @media screen and (max-width:411px) {
     #main {
         margin-top: 5vh;
+        height: 50vh;
         width: 90vw;
         background-color: purple;
         padding: 5px;
