--- a/task-8/css/style.css
+++ b/task-8/css/style.css
@@ -73,6 +73,9 @@ h1 {
         padding: 5px;
         border-radius: 10px;
     }
+    h1 {
+        margin-top: 10vh;
+    }
     #inp_field{
         margin-left: 3vw;
     }
